--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,7 @@ dependencies = [
     "uvicorn[standard]>=0.30.0",
     "psycopg[binary]>=3.2.1",
     "psycopg2>=2.9.11",
+    "apscheduler>=3.10.4",
+    "python-multipart>=0.0.9",
+    "python-dotenv>=1.0.0",
 ]
